# b3

./: .pylintrc  __init__.py  main.py  pyproject.toml
src/b3/: __init__.py  exceptions.py  utils.py
src/b3/datatypes/: __init__.py  company.py  contract_correction.py  daily_bulletin.py  market.py  quotes.py  specification.py
src/b3/net/: __init__.py  query.py
src/b3/parsing/: __init__.py  historical_quotes.py
