[project]
name = "b3"
version = "0.1.0"
description = "B3 Historical data parsing"
readme = "README.md"
authors = [
  { name = "Vinicius de Souza", email = "souzadevinicius@gmail.com" },
]

requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
]
